<resources>
    <string name="accept">Accept</string>
    <string name="add">Add</string>
    <string name="add_contact">Add contact</string>
    <string name="add_contact_message_default">Talk to me on aTox like a reasonable human being.</string>
    <string name="add_contact_message_error_empty">Message can\'t be empty</string>
    <string name="app_name" translatable="false">aTox</string>
    <string name="cancel">Cancel</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting…</string>
    <string name="contact_typing">Typing…</string>
    <string name="copied">Copied</string>
    <string name="copy">Copy</string>
    <string name="create">Create</string>
    <string name="create_a_tox_profile">Create a Tox profile</string>
    <string name="delete_contact">Delete contact</string>
    <string name="message">Message</string>
    <string name="messages">Messages</string>
    <string name="messages_incoming">Incoming messages</string>
    <string name="name">Name</string>
    <string name="name_default">aTox user</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="password_optional">Password (optional)</string>
    <string name="profile_photo_description">Profile photo</string>
    <string name="reject">Reject</string>
    <string name="send">Send</string>
    <string name="settings">Settings</string>
    <string name="status_indicator">Status indicator</string>
    <string name="status_message">Status message</string>
    <string name="status_message_default">Brought to you live, by aTox</string>
    <string name="tox_id">Tox ID</string>
    <string name="tox_id_copied">Tox ID copied</string>
    <string name="tox_id_copy">Copy Tox ID</string>
    <string name="tox_id_error_length">Tox ID must be 76 characters</string>
    <string name="tox_id_share">Share Tox ID</string>
    <string name="update">Update</string>

    <!-- Friend request notification -->
    <string name="friend_requests">Friend requests</string>
    <string name="friend_request_from">Friend request from %1$s</string>

    <!-- Chat history clearing -->
    <string name="clear_history">Clear history</string>
    <string name="clear_history_cleared">History cleared</string>
    <string name="clear_history_confirm">Are you sure you want to clear your chat history with %1$s?</string>
    <string name="import_tox_save">Import Tox save</string>
    <string name="import_tox_save_failed">Import failed for some reason</string>
    <string name="export_tox_save">Export Tox save</string>
    <string name="tox_save_exported">Tox save exported</string>

    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>

    <!-- Preference titles -->
    <string name="tox_header">Tox</string>
    <string name="user_header">User</string>

    <!-- Messages preferences -->
    <string name="username_title">Username</string>
    <string name="status_message_title">Status message</string>
    <string name="status_title">Status</string>

    <!-- Tox preferences -->
    <string name="proxy_title">Proxy</string>
    <string name="proxy_address_title">Proxy address</string>
    <string name="tcp_title">TCP mode</string>
</resources>
