<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fileTransfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout android:id="@+id/fileTransferContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:padding="0dp">
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical">
            <TextView android:id="@+id/fileName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    tools:text="linux_distro.iso"/>
            <ProgressBar android:id="@+id/progress"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <LinearLayout android:id="@+id/acceptLayout"
                    style="?buttonBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                <Button android:id="@+id/accept"
                        style="?buttonBarPositiveButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="0dp"
                        android:text="@string/accept"/>
                <Button android:id="@+id/reject"
                        style="?buttonBarPositiveButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="0dp"
                        android:text="@string/reject"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/cancelLayout"
                    style="?buttonBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:visibility="gone">
                <Button android:id="@+id/cancel"
                        style="?buttonBarPositiveButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="0dp"
                        android:text="@string/cancel" />
            </LinearLayout>
        </LinearLayout>
        <TextView android:id="@+id/timestamp"
                style="@style/TextAppearance.AppCompat.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                tools:text="2020-12-24" />
    </LinearLayout>
</RelativeLayout>
